# blog

./: README.md  compose.yaml  netlify.toml  pelicanconf.py  pyproject.toml
.github/workflows/: github-pages.yaml  new-article.yaml
ci/: build.sh  gen-css.sh  gen-github-workflows.py  new-article.py
content/articles/1998/07/: 1998-07-17-ceremony.md
content/articles/1999/06/: 1999-06-01-natural-resources.md  1999-06-09-airports.md  1999-06-15-threats.md  1999-06-22-chores.md  1999-06-29-vacations.md
content/articles/1999/07/: 1999-07-13-traveling.md  1999-07-20-legality.md  1999-07-27-executive.md
content/articles/1999/08/: 1999-08-02-fairy-tales.md  1999-08-06-fable-improvement.md  1999-08-16-the-chance.md  1999-08-19-penny-saved.md  1999-08-20-traffic-laws.md
content/articles/1999/09/: 1999-09-02-handedness.md
content/articles/1999/10/: 1999-10-07-money.md
content/articles/2000/01/: 2000-01-02-penny-saved-revisited.md  2000-01-15-new-product.md
content/articles/2000/06/: 2000-06-23-new-service.md
content/articles/2000/10/: 2000-10-14-mix-it-up.md
content/articles/2001/08/: 2001-08-15-flight-to-england.md
content/articles/2002/10/: 2002-10-13-faith.md
content/articles/2004/03/: 2004-03-10-it-begins.md  2004-03-11-point-of-no-return.md  2004-03-14-waco.md  2004-03-27-hugs.md  (+7 more)
content/images/: keybase.txt
content/pages/: alpha.md  drafts.md  rss.md
output/: alpha.html  chrono.html  index.html  keybase.txt  rss.xml
themes/default/static/: main.css
themes/default/templates/: alpha.html  article.html  base.html  drafts.html  index.html  rss.xml
(+882 files in other folders)
