[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markdown>=3.8",
    "pelican>=4.11.0.post0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.31",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
